--- a/sf/package.json
+++ b/sf/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-google-maps": "^9.2.2",
     "react-scripts": "1.0.17"
   },
   "scripts": {
